Remove deprecated .newInstance() call